--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,11 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: fpco/stack-build:lts-15.4
-    
+      - image: fpco/stack-build:lts-18.27
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD 
+          
     steps:
       - run: apt-get update && apt-get install -y git ssh unzip
 
